welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:3: error: type mismatch;
 found   : Unit
 required: Boolean
while (fini=false){
           ^BDRBuggle:4: error: reassignment to val
	if (estSurMessage=true){
                         ^